@@ -10,7 +10,6 @@ set sv_privateclients 0
 set sv_privatepassword ""
 set rconpassword ""
 set refereePassword ""
-set shoutcastPassword ""
 set sv_maxRate 13000
 set sv_dl_maxRate 42000
 set sv_allowDownload 1
@@ -189,6 +188,7 @@ set vote_allow_restartcampaign 1
 set vote_allow_poll 1
 set vote_allow_maprestart 1
 set vote_allow_shufflenorestart 1
+set vote_allow_cointoss 1
 set g_fear 2000
 set g_obituary 2
 set g_throwableKnives 0
@@ -296,6 +296,8 @@ set g_countryFlags 1
 set g_chargeType 2
 set g_flushItems 1
 set g_maxConnsPerIP 4
+set shoutcastPassword "none"
+set g_headshot 0
 
 exec campaigncycle.cfg
 set com_watchdog 60
